# openpose

./: CMakeLists.txt  config.yaml
examples/user_code/: CMakeLists.txt  OscOutput.hpp  SpoutInput.cpp  SpoutInput.hpp  Tracker.h  TrackerPostProcessing.cpp  TrackerPostProcessing.hpp  spout_osc.cpp
src/openpose/filestream/: udpSender.cpp
